force-app/main/default/objects/Asset/fields/Asset_QR_Code__c.field-meta.xml
<CustomField>
    <fullName>Asset_QR_Code__c</fullName>
    <description>Stable identifier encoded in the physical asset QR code and used during location audits.</description>
    <externalId>true</externalId>
    <label>Asset QR Code</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>