force-app/main/default/objects/Asset/fields/ERP_Equipment_ID__c.field-meta.xml
<CustomField>
    <fullName>ERP_Equipment_ID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>Unique SAP equipment identifier used to resolve inbound SAP2CASE messages to an Asset.</description>
    <externalId>true</externalId>
    <label>ERP Equipment ID</label>
    <length>25</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>