force-app/main/default/objects/Asset/fields/Last_PM_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_PM_Date__c</fullName>
    <description>Date on which preventive maintenance was last completed for this Asset.</description>
    <label>Last PM Date</label>
    <type>Date</type>
</CustomField>