force-app/main/default/objects/Asset/fields/PM_Automation_Enabled__c.field-meta.xml
<CustomField>
    <fullName>PM_Automation_Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Opts this Asset into automated preventive-maintenance Work Order generation.</description>
    <inlineHelpText>Enable only when this Asset should receive preventive-maintenance Work Orders.</inlineHelpText>
    <label>PM Automation Enabled</label>
    <type>Checkbox</type>
</CustomField>