force-app/main/default/objects/Asset/fields/PM_Base_Date__c.field-meta.xml
<CustomField>
    <fullName>PM_Base_Date__c</fullName>
    <description>Preferred anchor date for calculating the next preventive-maintenance due date.</description>
    <inlineHelpText>Takes precedence over Last PM Date when the automation calculates the next due date.</inlineHelpText>
    <label>PM Base Date</label>
    <type>Date</type>
</CustomField>